# Signify_Public

./: .flutter-plugins  .flutter-plugins-dependencies  .gitignore  API.py  README.md  extract_data.ipynb  flutter_native_splash.yaml  old_Model.ipynb  pubspec.yaml  train.ipynb  utils.py
Features Extraction/: pose.py
Misc/: Sign_detect.py  test_dataset_videos.py
Setup/: req.txt
Signify-App/: .gitignore  README.md
Signify-App/android/app/: build.gradle  google-services.json
Signify-App/assets/jsons/: loading_face_animation_faster.json
Signify-App/ios/Runner/: GoogleService-Info.plist
Signify-App/lib/backend/: backend.dart
Signify-App/lib/flutter_flow/: flutter_flow_theme.dart  flutter_flow_util.dart  internationalization.dart
Signify-App/lib/walkthroughs/: signify_screen_1.dart  signify_screen_4.dart
Signify-App/test/: widget_test.dart
Signify-main/: .gitignore  pyproject.toml  test.ipynb
Signify-main/Features Extraction/: left.py  right.py
Signify-main/Misc/: convert_video.py  test_model.py
Signify-main/Models/: right_model.p
assets/jsons/: AI_Lines_Signify_Animation.json  mobile_device_animation.json
assets/models/: model.glb
firebase/: firestore.rules
firebase/functions/: package.json
ios/Runner/: Info.plist
ios/Runner.xcodeproj/: project.pbxproj
ios/Runner/bn.lproj/: InfoPlist.strings
ios/Runner/hi.lproj/: InfoPlist.strings
ios/Runner/kn.lproj/: InfoPlist.strings
lib/: index.dart  main.dart
lib/flutter_flow/: debug_util.dart
lib/walkthroughs/: signify_screen_2.dart  signify_screen_3.dart
web/: index.html
(+62 files in other folders)
