[tool.poetry]
name = "signify"
version = "0.1.0"
description = "Model for Signify Project"
authors = ["Swastik <swastilbansal0@gmail.com>"]
license = "GNU GENERAL PUBLIC LICENSE"
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "3.10.11"
jupyter = "^1.1.1"
opencv-python = "^4.10.0.84"
mediapipe = "^0.10.18"
tensorflow-io-gcs-filesystem = "0.27.0"
tensorflow = "^2.18.0"
pandas = "^2.2.3"
tqdm = "^4.67.1"
seaborn = "^0.13.2"
scikit-learn = "^1.5.2"
flask = "^3.1.0"
requests = "^2.32.3"
pytube = "^15.0.0"
google-generativeai = "^0.8.3"
scikit-learn-intelex = "^2025.0.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
